# CJTrade

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  mainloop-design.md  public_listed.csv  pyproject.toml
dev_doc/: API_DESIGN.md  BEGINNER_API_DESIGN.md  CALLBACK.md  example_strategy.py
doc/: API.md  CALLBACK_TEST_PLAN.md  ONESHOT_VS_FULLSIM_ANALYSIS.md  README.md
img/: order_lifecycle.md
poc/: StrategyEditor.sh  backtest.sh  backtest.sh.bak  backtest.toml  backtest_full_simulation.sh  backtest_full_simulation.toml  backtest_oneshot.sh
ref/: API_DESIGN.md  BEGINNER_API_DESIGN.md  CALLBACK.md  arenax_legacy_backend_checklist.md  example_strategy.py
scripts/: gen_config.bat  gen_config.sh  gen_init_account.bat  gen_init_account.sh  gen_todos_report.sh  quick_imports.py
src/cjtrade/: README.md  __init__.py  app.py  mainloop.py  test_runner.py  test_runner_arenax.py
src/cjtrade/analytics/fundamental/: __init__.py
src/cjtrade/analytics/informational/: news_client.py  sentiment_analysis.py
src/cjtrade/analytics/news/: news.py  sentiment_analysis.py
src/cjtrade/analytics/signals/: signal.py
src/cjtrade/analytics/strategies/: fixed_price.py
src/cjtrade/analytics/technical/: __init__.py  talib_wrapper.py
src/cjtrade/api/: __init__.py  beginner.py
src/cjtrade/apps/: README.md
src/cjtrade/apps/ArenaX/: README.md  __init__.py  arenax_account_client.py  arenax_broker_api.py  arenax_middleware.py  backends_ref.py  backtest_backend.py  base_backend.py  brokerside_server.py  brokerside_server_admin_shell.py  demo_backend.py  hist_backend.py  live_backend.py  market_data.py  none_backend.py  paper_backend.py  price_db.py  real_backend.py
src/cjtrade/apps/CJNews/: README.md  main.py
src/cjtrade/apps/cjtrade_shell/: README.md  cjtrade_shell.py  cjtrade_shell_arenax.py
src/cjtrade/apps/cjtrade_system/: README.md  arenax_runner.py  cjtrade_oneshot_backtest.py  cjtrade_system.py  cjtrade_system_arenax.py  system_launcher.py
src/cjtrade/brokers/: README.md  base_broker_api.py  broker_base.py
src/cjtrade/brokers/mock/: _mock_broker_backend.py  _mock_broker_order_gen.py  _mock_market.py  (+4 more)
src/cjtrade/chart/: __init__.py  _chart_base.py  _plotly.py  kbar_client.py  test_kbar_chart.py
src/cjtrade/core/: account_client.py  cjtrade_shell.py  cjtrade_system.py  config_loader.py
src/cjtrade/db/: db_api.py  db_base.py  duckdb.py  sqlcmd.py  sqlite.py
src/cjtrade/legacy/: __init__.py
src/cjtrade/llm/: _llm_base.py  azure_openai.py  chatpdf.py  gemini.py  llm_pool.py
src/cjtrade/models/: __init__.py  event.py  kbar.py  market_state.py  order.py  position.py  product.py  quote.py  rank_type.py  trade.py
src/cjtrade/scripts/: gen_todos_report.sh
src/cjtrade/tests/: cjtrade_shell.py  test_basic_flow.py  test_cjtrade_shell_all_cmds.sh  test_interactive_shell.py  test_type_conversion.py
tests/: cjtrade_shell.py  conftest.py  find_bad_commit.sh  run_broker_stability_tests.sh  test_arenax_server.sh  test_basic_flow.py  test_beginner_api.py  test_broker_api_stability.py  test_cjtrade_integration.sh  test_cjtrade_integration_arenax.sh  test_cjtrade_shell_all_cmds.sh  test_get_1d_kbar_arenax.py  test_sinopac_api_update_qty.py  test_system.sh  test_type_conversion.py
tests/cj_api/: __init__.py  base.py  edge.py  integration.py  normal.py  state.py  stress.py
tests/integration/: REAME.md  conftest.py
tests/integration/arenax/: test_db_state.py  test_edge_cases.py  test_lifecycle.py  test_normal.py  test_stress.py
tests/manual/: test_beginner_api.py  test_system.sh  test_type_conversion.py
tests/unit/: README.md
tests/utils/: __init__.py  get_test_price.py  test_formatter.py
utils/: date.py  ncal.py
(+183 files in other folders)
