[project]
name = "cjtrade"
version = "0.1.0"
description = "CJ Trading System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "beautifulsoup4>=4.13.5",
    "duckdb>=1.4.3",
    "fake-useragent>=2.2.0",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "google-genai>=1.56.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "mpl-finance>=0.10.1",
    "mplfinance>=0.12.10b0",
    "newsapi-python>=0.2.7",
    "ollama>=0.6.0",
    "pandas-datareader>=0.10.0",
    "plotly>=6.5.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "shioaji>=1.2.8",
    "ta-lib>=0.6.7",
    "yfinance>=0.2.66",

     "pyreadline3; platform_system == 'Windows'",
]

[project.scripts]
cjtrade = "cjtrade:cli"
main = "cjtrade:cli"
test = "cjtrade.test_runner:main"


[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
