[project]
name = "cjtrade"
version = "0.1.0"
description = "CJ Trading System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.0",
    "beautifulsoup4>=4.13.5",
    "duckdb>=1.4.3",
    "fake-useragent>=2.2.0",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "google-genai>=1.56.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.6",
    "mpl-finance>=0.10.1",
    "mplfinance>=0.12.10b0",
    "newsapi-python>=0.2.7",
    "ollama>=0.6.0",
    "pandas-datareader>=0.10.0",
    "plotly>=6.5.1",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "shioaji>=1.2.8",
    "ta-lib>=0.6.7",
    "yfinance>=0.2.66",
    "pyreadline3; platform_system == 'Windows'",
    "openai>=2.26.0",
    "quantstats>=0.0.81",
]

[project.scripts]
cjtrade = "cjtrade:cli"
main = "cjtrade:cli"
test = "cjtrade.test_runner:main"
atest = "cjtrade.test_runner_arenax:main"
# atest = "cjtrade.apps.ArenaX.tests.test_runner:main"
arenaxd = "cjtrade.apps.ArenaX.brokerside_server:main"
aresh = "cjtrade.apps.ArenaX.brokerside_server_admin_shell:main"
system = "cjtrade.apps.cjtrade_system.arenax_runner:main"
osystem = "cjtrade.apps.cjtrade_system.cjtrade_system:main_system"
backtest = "cjtrade.apps.cjtrade_system.cjtrade_oneshot_backtest:main"
_system_direct = "cjtrade.apps.cjtrade_system.cjtrade_system_arenax:main_system"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Pure unit tests, no external dependencies",
    "integration: Requires running external services (ArenaX server, real broker)",
]

[tool.coverage.run]
source = ["src/cjtrade"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
skip_covered = false

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
